# Z80Explorer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Readme.docx  Z80Explorer.pro  highDPI.bat  index.html  release.bat  z80qsim.pro  z80qtSim.pro
docs/: Z80Explorer.docx  Z80Explorer.htm  Z80Explorer.html
docs/Z80Explorer_files/: filelist.xml  header.htm  preview.wmf  props002.xml  themedata.thmx
installer/: config.xml  z80explorer.package.xml
resource/: README.md  README.txt  annot_functional.json  annot_internals.json  annotations.json  cleanup.reg  colors.json  cookie.sna  hello_world.hex  init.js  latches.ini  layermap.7z  layermap.qz  mm.sna  netnames.js  nodenames.js  schem.ini  segvdefs.7z  sna.js  sna_patch.hex  sock.py  tips.json  viewlist-1.vl  watchlist.json  watchlist.wl  waveform-1.json  waveform-2.json  zexall.hex  zx.js
resource/tests/: hello_world.asm  make_test.bat  readme.txt  sna_patch.asm  test_blank.asm  test_busrq.asm  test_daa.asm  test_every_op.asm  test_ints.asm  test_neg.asm  test_proto.asm  trickbox.inc  zexall.asm  zmac.html
src/: AppTypes.h  ClassAnnotate.cpp  ClassAnnotate.h  ClassApplog.cpp  ClassApplog.h  ClassBaseGraph.cpp  ClassBaseGraph.h  ClassChip.cpp  ClassChip.h  ClassColors.cpp  ClassColors.h  ClassController.cpp  ClassController.h  ClassDockCollection.cpp  ClassDockCollection.h  ClassException.h  ClassJSLoader.cpp  ClassJSLoader.h  ClassLogic.cpp  ClassLogic.h  ClassNetlist.cpp  ClassNetlist.h  ClassScript.cpp  ClassScript.h  ClassServer.cpp  ClassServer.h  ClassSim.cpp  ClassSim.h  ClassSimX.cpp  ClassSimX.h  ClassSimZ80.cpp  ClassSimZ80.h  ClassSimZ80_AVX2.cpp  ClassSimZ80_AVX2.h  ClassSingleton.h  ClassTip.cpp  ClassTip.h  ClassTrickbox.cpp  ClassTrickbox.h  ClassVisual.cpp  (+88 more)
src/cereal/types/: QColor.hpp  QString.hpp  QVector.hpp
tests/: hello_world.asm  readme.txt  test_daa.asm  test_neg.asm  test_proto.asm  trickbox.inc  zexall.asm
